[gd_scene load_steps=5 format=3 uid="uid://ctpx8m63u73x7"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_a17p3"]
[ext_resource type="Texture2D" uid="uid://4y0uaoqugqiv" path="res://assets/background/Background.png" id="1_w0nk0"]
[ext_resource type="PackedScene" uid="uid://brlidiv18sdn0" path="res://options_menu/options_menu.tscn" id="3_snpcx"]

[sub_resource type="SystemFont" id="SystemFont_g2c8a"]
font_names = PackedStringArray("Nimbus Sans")

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a17p3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w0nk0")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.314316, 0.314316, 0.314316, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_g2c8a")
theme_override_font_sizes/font_size = 20
text = "Frail Dark"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Novo jogo"

[node name="options_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Configurações"

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="Options_Menu" parent="." instance=ExtResource("3_snpcx")]
visible = false
layout_mode = 1
